--- a/public/index.html
+++ b/public/index.html
@@ -1,2 +1,13 @@
-<div id="root"></div>
-<script src="bundle.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Libs</title>
+  </head>
+  <body>
+    <h1>My Libs</h1>
+    <script type="module" src="./index.js"></script>
+  </body>
+</html>
