--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>My Libs</h1>
+    <div id="root"></div>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
