--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Libs</title>
+    <title>My Frankensteinish Libs</title>
   </head>
   <body>
-    <h1>My Libs</h1>
     <div id="root"></div>
     <script type="module" src="./index.js"></script>
   </body>
